# fly_in

./: .gitignore  Makefile  README.md  fly_in.excalidraw  pyproject.toml  requirements.txt  tets.py
maps/challenger/: 01_the_impossible_dream.txt
src/: __init__.py  colors.py  connection.py  dijkstra.py  djikstra.py  drone.py  drone_map.py  fly_in.py  hub.py  new_dijkstra.py  parsing.py  pygame.md  pyproject.toml  screen.py  test.py  test.txt  testblbl.py  visual_simulation.py  zone_type.py
