[project]
name = "fly_in"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pygame",
	"pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[[tool.mypy.overrides]]
module = "pygame.*"
ignore_missing_imports = true