[project]
name = "fly_in"
version = "1.0.0"
description = "Fly-in"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.6.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.19.1",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
